[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/enemy_base.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/enemyFlying_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/enemyFlying_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/enemyFlying_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/enemyFlying_3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die"

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]

[node name="enemy_hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hurtbox"]

[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_entered" from="enemy_hurtbox" to="." method="_on_enemy_hurtbox_area_entered"]
[connection signal="area_exited" from="enemy_hurtbox" to="." method="_on_enemy_hurtbox_area_exited"]
